{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 2604,
  "lineage": "3660655d-248a-b4d8-46a3-a639a6fff275",
  "resources": [
    {
      "module": "module.dev.module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:loadbalancer/app/todolist-frontend-alb/c9da152f2c117828",
            "arn_suffix": "app/todolist-frontend-alb/c9da152f2c117828",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "todolist-frontend-alb-361219852.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:loadbalancer/app/todolist-frontend-alb/c9da152f2c117828",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "todolist-frontend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-097e0c9c395a9ee29"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f67f6671985bf58"
              },
              {
                "subnet_id": "subnet-0d2cf09cab2a88cf2"
              }
            ],
            "subnets": [
              "subnet-00f67f6671985bf58",
              "subnet-0d2cf09cab2a88cf2"
            ],
            "vpc_id": "vpc-0f5bbacb2f351ac6b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.dev.module.alb.module.alb.aws_security_group.alb_sg",
            "module.dev.module.alb.module.alb.module.global_network.data.aws_subnets.public",
            "module.dev.module.alb.module.alb.module.global_network.data.aws_subnets.public2",
            "module.dev.module.alb.module.alb.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_policy.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_cloudwatch_log_group.vpc_endpoint_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_flow_log.vpc_endpoint_flow_log",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_policy.vpc_endpoint_logs_policy",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role.vpc_endpoint_logs_role",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role_policy_attachment.vpc_endpoint_logs_role_attachment",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.cloudwatch_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_api",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_dkr",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.s3",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:listener/app/todolist-frontend-alb/c9da152f2c117828/3d9b922f34a9f0f4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:targetgroup/todolist-frontend-lb-tg/904302b626f19e9b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:listener/app/todolist-frontend-alb/c9da152f2c117828/3d9b922f34a9f0f4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:loadbalancer/app/todolist-frontend-alb/c9da152f2c117828",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.alb.module.alb.aws_lb.main",
            "module.dev.module.alb.module.alb.aws_lb_target_group.main",
            "module.dev.module.alb.module.alb.aws_security_group.alb_sg",
            "module.dev.module.alb.module.alb.module.global_network.data.aws_subnets.public",
            "module.dev.module.alb.module.alb.module.global_network.data.aws_subnets.public2",
            "module.dev.module.alb.module.alb.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_policy.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_cloudwatch_log_group.vpc_endpoint_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_flow_log.vpc_endpoint_flow_log",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_policy.vpc_endpoint_logs_policy",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role.vpc_endpoint_logs_role",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role_policy_attachment.vpc_endpoint_logs_role_attachment",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.cloudwatch_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_api",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_dkr",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.s3",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:targetgroup/todolist-frontend-lb-tg/904302b626f19e9b",
            "arn_suffix": "targetgroup/todolist-frontend-lb-tg/904302b626f19e9b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:targetgroup/todolist-frontend-lb-tg/904302b626f19e9b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "todolist-frontend-lb-tg",
            "port": 30504,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f5bbacb2f351ac6b"
          },
          "dependencies": [
            "module.dev.module.alb.module.alb.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_policy.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_cloudwatch_log_group.vpc_endpoint_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_flow_log.vpc_endpoint_flow_log",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_policy.vpc_endpoint_logs_policy",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role.vpc_endpoint_logs_role",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role_policy_attachment.vpc_endpoint_logs_role_attachment",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.cloudwatch_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_api",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_dkr",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.s3",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.alb.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:security-group/sg-097e0c9c395a9ee29",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097e0c9c395a9ee29",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-2025042907422299240000000e",
            "name_prefix": "terraform-",
            "owner_id": "241875560804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todolist-frontend-alb-sg"
            },
            "tags_all": {
              "Name": "todolist-frontend-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5bbacb2f351ac6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.alb.module.alb.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_policy.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_cloudwatch_log_group.vpc_endpoint_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_flow_log.vpc_endpoint_flow_log",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_policy.vpc_endpoint_logs_policy",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role.vpc_endpoint_logs_role",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role_policy_attachment.vpc_endpoint_logs_role_attachment",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.cloudwatch_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_api",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_dkr",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.s3",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.ecs.module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:security-group/sg-09f585419f4cddcb5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f585419f4cddcb5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30504,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097e0c9c395a9ee29"
                ],
                "self": false,
                "to_port": 30504
              }
            ],
            "name": "terraform-20250429074225904800000010",
            "name_prefix": "terraform-",
            "owner_id": "241875560804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todolist-frontend-ecs-service-sg"
            },
            "tags_all": {
              "Name": "todolist-frontend-ecs-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5bbacb2f351ac6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.alb.module.alb.aws_security_group.alb_sg",
            "module.dev.module.alb.module.alb.module.global_network.data.aws_vpcs.main",
            "module.dev.module.ecs.module.ecs.module.network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_policy.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_cloudwatch_log_group.vpc_endpoint_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_flow_log.vpc_endpoint_flow_log",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_policy.vpc_endpoint_logs_policy",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role.vpc_endpoint_logs_role",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role_policy_attachment.vpc_endpoint_logs_role_attachment",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.cloudwatch_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_api",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_dkr",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.s3",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecr_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:security-group/sg-080b19579106e8b29",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080b19579106e8b29",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20250429074106562400000004",
            "name_prefix": "terraform-",
            "owner_id": "241875560804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todolist-vpc_endpoint-sg"
            },
            "tags_all": {
              "Name": "todolist-vpc_endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5bbacb2f351ac6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc-endpoint/vpce-06df90a078a854344",
            "dns_entry": [
              {
                "dns_name": "vpce-06df90a078a854344-3cja22qf.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-06df90a078a854344-3cja22qf-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-06df90a078a854344-3cja22qf-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z02586642ASC1MJBWXR0V"
              },
              {
                "dns_name": "logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z02542663O75JUBUMLM5Z"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06df90a078a854344",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-096fdf39b0912242b",
              "eni-0d5fef43f507b84d0"
            ],
            "owner_id": "241875560804",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-080b19579106e8b29"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.169",
                "subnet_id": "subnet-0a20a90150da80202"
              },
              {
                "ipv4": "10.0.12.104",
                "subnet_id": "subnet-0d40495f4fda9c414"
              }
            ],
            "subnet_ids": [
              "subnet-0a20a90150da80202",
              "subnet-0d40495f4fda9c414"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f5bbacb2f351ac6b"
          },
          "dependencies": [
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc-endpoint/vpce-0cf8cb26de12426cf",
            "dns_entry": [
              {
                "dns_name": "vpce-0cf8cb26de12426cf-bt8vwlmx.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0cf8cb26de12426cf-bt8vwlmx-ap-northeast-1c.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0cf8cb26de12426cf-bt8vwlmx-ap-northeast-1a.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "api.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z02590632DMO1KZXQA0I0"
              },
              {
                "dns_name": "ecr.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z02617201K7EAZGJEDVFG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cf8cb26de12426cf",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-030b22ae10dd167d6",
              "eni-0a6fee731d42817b5"
            ],
            "owner_id": "241875560804",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-080b19579106e8b29"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.api",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.36",
                "subnet_id": "subnet-0a20a90150da80202"
              },
              {
                "ipv4": "10.0.12.254",
                "subnet_id": "subnet-0d40495f4fda9c414"
              }
            ],
            "subnet_ids": [
              "subnet-0a20a90150da80202",
              "subnet-0d40495f4fda9c414"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f5bbacb2f351ac6b"
          },
          "dependencies": [
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc-endpoint/vpce-0f1f346ea58cd424f",
            "dns_entry": [
              {
                "dns_name": "vpce-0f1f346ea58cd424f-6x4yw35e.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0f1f346ea58cd424f-6x4yw35e-ap-northeast-1c.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0f1f346ea58cd424f-6x4yw35e-ap-northeast-1a.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z02597262GTFGGSCI1JAV"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z02597262GTFGGSCI1JAV"
              },
              {
                "dns_name": "dkr-ecr.ap-northeast-1.on.aws",
                "hosted_zone_id": "Z0117333E1JZNZY2COD9"
              },
              {
                "dns_name": "*.dkr-ecr.ap-northeast-1.on.aws",
                "hosted_zone_id": "Z0117333E1JZNZY2COD9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f1f346ea58cd424f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02c0c9349ca012b0b",
              "eni-0ed7210c1f9315abc"
            ],
            "owner_id": "241875560804",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-080b19579106e8b29"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.dkr",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.142",
                "subnet_id": "subnet-0a20a90150da80202"
              },
              {
                "ipv4": "10.0.12.75",
                "subnet_id": "subnet-0d40495f4fda9c414"
              }
            ],
            "subnet_ids": [
              "subnet-0a20a90150da80202",
              "subnet-0d40495f4fda9c414"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f5bbacb2f351ac6b"
          },
          "dependencies": [
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc-endpoint/vpce-0b7d374f8431df9b4",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.20.0/24",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "id": "vpce-0b7d374f8431df9b4",
            "owner_id": "241875560804",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0950ddd66c33e9248"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f5bbacb2f351ac6b"
          },
          "dependencies": [
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:internet-gateway/igw-07307e5e5870a4d6b",
            "id": "igw-07307e5e5870a4d6b",
            "owner_id": "241875560804",
            "tags": {
              "Name": "todolist-igw"
            },
            "tags_all": {
              "Name": "todolist-igw"
            },
            "vpc_id": "vpc-0f5bbacb2f351ac6b"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:route-table/rtb-0950ddd66c33e9248",
            "id": "rtb-0950ddd66c33e9248",
            "owner_id": "241875560804",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "todolist-private-route-table"
            },
            "tags_all": {
              "Name": "todolist-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5bbacb2f351ac6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:route-table/rtb-08bdb5af30de59c70",
            "id": "rtb-08bdb5af30de59c70",
            "owner_id": "241875560804",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07307e5e5870a4d6b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "todolist-public-route-table"
            },
            "tags_all": {
              "Name": "todolist-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5bbacb2f351ac6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b28c2b20bdd3b81",
            "route_table_id": "rtb-0950ddd66c33e9248",
            "subnet_id": "subnet-0a20a90150da80202"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ace3b1673204e132",
            "route_table_id": "rtb-0950ddd66c33e9248",
            "subnet_id": "subnet-0d40495f4fda9c414"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0782f12c499a03bb9",
            "route_table_id": "rtb-08bdb5af30de59c70",
            "subnet_id": "subnet-00f67f6671985bf58"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013370b83dfc9fe05",
            "route_table_id": "rtb-08bdb5af30de59c70",
            "subnet_id": "subnet-0d2cf09cab2a88cf2"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-0a20a90150da80202",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a20a90150da80202",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-private-an1a-subnet"
            },
            "tags_all": {
              "Name": "todolist-private-an1a-subnet"
            },
            "vpc_id": "vpc-0f5bbacb2f351ac6b"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-0d40495f4fda9c414",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d40495f4fda9c414",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-private-an1c-subnet"
            },
            "tags_all": {
              "Name": "todolist-private-an1c-subnet"
            },
            "vpc_id": "vpc-0f5bbacb2f351ac6b"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-00f67f6671985bf58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f67f6671985bf58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-public-an1a-subnet"
            },
            "tags_all": {
              "Name": "todolist-public-an1a-subnet"
            },
            "vpc_id": "vpc-0f5bbacb2f351ac6b"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-0d2cf09cab2a88cf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2cf09cab2a88cf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-public-an1c-subnet"
            },
            "tags_all": {
              "Name": "todolist-public-an1c-subnet"
            },
            "vpc_id": "vpc-0f5bbacb2f351ac6b"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc/vpc-0f5bbacb2f351ac6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f957cac1c6fa3b8f",
            "default_route_table_id": "rtb-0931743ab06fc8ee7",
            "default_security_group_id": "sg-01997caa3e2c0209e",
            "dhcp_options_id": "dopt-4871452f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f5bbacb2f351ac6b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0931743ab06fc8ee7",
            "owner_id": "241875560804",
            "tags": {
              "Name": "todolist-vpc"
            },
            "tags_all": {
              "Name": "todolist-vpc"
            }
          }
        }
      ]
    }
  ]
}